--- a/product-service/package.json
+++ b/product-service/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "serverless-offline": "^8.8.1",
+    "serverless-plugin-swagger-ui": "^1.1.1",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.35.2"
   },
