--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -2,12 +2,20 @@ service: product-service
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
-frameworkVersion: '3'
+frameworkVersion: "3"
 
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
   - serverless-offline
+  - serverless-plugin-swagger-ui
+custom:
+  swaggerUi:
+    s3Bucket: aws-reactshop-api-docs
+    exportType: swagger
+    accepts: application/json
+    swaggerUiConfig:
+      supportedSubmitMethods: ["get", "post", "put", "delete"]
 
 provider:
   name: aws
@@ -30,3 +38,25 @@ functions:
           method: get
           path: /products/{id}
           cors: true
+resources:
+  Resources:
+    S3BucketApiDocs:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:custom.swaggerUi.s3Bucket}
+        AccessControl: PublicRead
+        WebsiteConfiguration:
+          IndexDocument: index.html
+    S3BucketPolicyApiDocs:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        Bucket:
+          Ref: S3BucketApiDocs
+        PolicyDocument:
+          Statement:
+            - Action:
+                - s3:GetObject
+              Effect: Allow
+              Resource:
+                Fn::Sub: arn:aws:s3:::${S3BucketApiDocs}/*
+              Principal: "*"
