--- a/product-service/package.json
+++ b/product-service/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "description": "Serverless webpack example using ecma script",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "start": "serverless offline start",
     "deploy": "serverless deploy"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "jest": "^28.1.3",
     "serverless-offline": "^8.8.1",
     "serverless-plugin-swagger-ui": "^1.1.1",
     "serverless-webpack": "^5.3.1",
