--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -3,6 +3,7 @@ service: product-service
 #app: your-app-name
 #org: your-org-name
 frameworkVersion: "3"
+useDotenv: true
 
 # Add the serverless-webpack plugin
 plugins:
@@ -31,6 +32,12 @@ functions:
           method: get
           path: /products
           cors: true
+    environment:
+      DB_USER: ${env:DB_USER}
+      DB_PASSWORD: ${env:DB_PASSWORD}
+      DB_HOST: ${env:DB_HOST}
+      DB_PORT: ${env:DB_PORT}
+      DB_NAME: ${env:DB_NAME}
   getProductsById:
     handler: getProductsById.handler
     events:
